<resources>
    <string name="app_name">HeartRateMonitorWearOs</string>

    <!-- Home -->
    <string name="btn_start_monitoring">근무 시작</string>
    <string name="btn_setting_permission">권한 설정</string>
    <string name="btn_setting_battery_saver_mode">절전모드 설정</string>
    <string name="essential_permission_message">필수 권한이\n 설정되어있지 않습니다.</string>

    <!-- Monitoring -->
    <string name="present_user_account">ID</string>
    <string name="present_heart_rate">심박수</string>
    <string name="colon">:</string>
    <string name="btn_end_monitoring">근무 종료</string>
    <string name="btn_urgent">긴급 신고</string>
</resources>