<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/startMonitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_monitoring"/>

    <LinearLayout
        android:id="@+id/llRequestPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_small"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/essential_permission_message"
            android:textColor="@color/red"/>

        <Button
            android:id="@+id/btnSettingPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_setting_permission"/>

    </LinearLayout>

</LinearLayout>